# petragentic

./: .flake8  .gitignore  README.md  petragentic-architecture-plan.md  pyproject.toml
.github/workflows/: build-and-test.yml  deploy-to-ibm-cloud.yml  scheduled-audit.yml
agent1/: .env.example  Dockerfile  __init__.py  requirements.txt
agent1/app/: __init__.py  config.py  main.py
agent2/: .env.example  Dockerfile  __init__.py  requirements.txt
agent2/app/: __init__.py  config.py  main.py
docs/: api-reference.md  local-dev.md  orchestrate.md  runbook.md
gateway/: .env.example  Dockerfile  requirements.txt
gateway/app/: auth.py  config.py  main.py  proxy.py
infra/: docker-compose.yml
infra/openshift/: namespace.yaml
infra/seeds/: 01_ddl_create_tables.sql  02_seed_integration_catalogue.sql  03_seed_server_baselines.sql  04_seed_audit_history.sql  README.md  run_seeds.py
infra/terraform/: cos.tf  iam.tf  main.tf  outputs.tf  roks.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf  vpn.tf  watsonx.tf
orchestrate/: .env.example  Dockerfile  requirements.txt
orchestrate/agents/: petragentic_agent.yaml
orchestrate/app/: __init__.py  config.py  main.py  memory.py  react_engine.py  tools.py
orchestrate/skills/: openapi_agent1.yaml  openapi_agent2.yaml  skill_agent1.yaml  skill_agent2.yaml
shared/: __init__.py  config.py  cos_client.py  exceptions.py  governance_logger.py  logging.py  requirements.txt  watsonx_client.py  wxdata_client.py
tests/: conftest.py
tests/agent1/: test_prompt_builder.py  test_recommender.py
(+65 files in other folders)
