[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "petragentic"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "flake8>=6.1",
    "black>=23.0",
    "isort>=5.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "agent1*", "agent2*", "gateway*", "orchestrate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["shared", "agent1", "agent2", "gateway"]
